# euieInvest-quant

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  SESSION_HANDOFF.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  notify-ntfy.yml
data/quant_publish/: README.md  equity_slow_universe_v1.parquet  hybrid_AbearCstrictcontinuous_v06bear_regime_labels.parquet  multi_strategy_policies.parquet  multi_strategy_policies_v06.parquet  multi_strategy_policies_walkforward.parquet  multi_strategy_policy_summary.parquet  regime_labels_v1.parquet  regime_labels_v1_README.md  regime_labels_v1_walkforward.parquet  regime_labels_v2.parquet  server_strategy_daily.parquet  stream_2b_daily.parquet  (+10 more)
docs/: ENCODER-SYMBOL-AXIS.md  SLEEVE-SEMANTICS.md  api-contract.md  continuity-prompt-2026-05-19.md  exit-logic-friction-regime-pairing.md  index.md  reports-repo-layout.md  server-implementation-guide.md  sharpe-metric-scoping.md  theses-from-discovery-v1.md  theses-from-discovery-v2.md
reports/: btc-compare-pass3.json  cliff-at-500k-friction.json  multi-version-by-N-500k.json  multi-version-n10-500k.json  regime-gated-n12-with-inverse.json  regime-gated-n12.json
runs/: README.md
scripts/: analyze_30d_rolling.py  analyze_cliff_vs_atr.py  analyze_recovery_quality.py  analyze_resilience_v2.py  analyze_volume_vs_cliff.py  build-heuristic-regime-labels.py  compare_versions_single_symbol.py  diagnose_track_f_encoder.py  discover.py  multivariate_resilience.py  per_symbol_cliff_vs_atr.py  pull-snapshot.ps1  pull-snapshot.sh  pull-via-api.py  pull_intraday.py  pull_intraday_batched.py  sweep_6_version_n10.py  sweep_cliff_at_500k_friction.py  sweep_multi_version_by_N.py  sweep_multi_version_n10.py  sweep_regime_gated_n12.py  test_t2_scorer.py
server/: README.md  pyproject.toml
server/analysis/: bivariate_winner_scan.py  pairwise_interaction_scan.py
server/deploy/: euieinvest-quant-api-user.service  euieinvest-quant-api.service
server/src/euieinvest_api/: __init__.py  app.py  db.py  peer_hash.py
server/tests/: test_smoke.py
tests/: test_api_client.py  test_breakout_seq_label.py  test_emit_quant_signals.py  test_exit_label.py  test_features_behavioral.py  test_features_gaps.py  test_features_momentum.py  test_features_price.py  test_features_relative.py  test_features_volatility.py  test_features_volume.py  test_labels.py  test_loader.py  test_loader_parquet.py  test_resolve_run_dir.py  test_sustained_winner_label.py  test_temporal_split.py  test_track_xgb_rule_extraction.py  test_train_checkpoint.py  test_verify_encoder_sha.py  test_windows.py
(+110 files in other folders)
