[project]
name = "quant"
version = "0.1.0"
description = "ML/quant research platform — outlier-breakout pattern discovery"
requires-python = "==3.11.*"
dependencies = [
    "polars>=1.0",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "shap>=0.45",
    "matplotlib>=3.8",
    "pyarrow>=15",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
