[project]
name = "euieinvest-quant-api"
version = "1.0.0"
description = "Read-only HTTP API exposing euieInvest's price_history, peer_groups, and anomaly_flags tables to the euieInvest-quant consumer."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Use polars-lts-cpu on hosts without AVX2 (e.g. claudehost PVE VM).
    # Same Python module name (`polars`), just compiled for older CPUs.
    "polars-lts-cpu>=1.12.0",
    "pyarrow>=18.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/euieinvest_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
